# text_extractor

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  text_extractor.py
